--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,176 @@
+.color-pallete {
+    color:#FFFFFF;
+    color:#EFEFEF;
+    color:#999999;
+    color:#5900B2;
+    color:#070707;
+}
+
+
+body,html {
+    height: 100%
+}
+
 body {
-    background-color: lightskyblue
+    margin:0;    
+    background-color: #070707;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+    background-color: #5900B2;
+    padding: 10px;
+}
+
+h1 {
+    margin:0;
+    font-size: 28px;
+    text-align: center;
+    color: white;
+}
+
+h2 {
+    margin:0;
+    font-size: 20px;
+    text-align: center;
+}
+
+.game-container {
+    margin: auto;
+    margin-top:26px;
+    width: 294px;;
+}
+
+.start-container{
+    height: 260px;
+    width: 260px;
+    background-color: #EFEFEF;
+    border:solid 2px #999999;
+    border-radius: 4px;
+    padding:15px;
+    display: grid;
+    grid-template-areas: 
+    "title title"
+    "text image"
+    "form form"
+}
+
+.start-title {
+    grid-area: title;
+    color: black;
+}
+
+.start-image {
+    grid-area: image;
+    border-radius: 4px;
+    height: 130px;
+}
+.start-text {
+    grid-area: text;
+    font-size:12px;
+    padding-right:10px;
+}
+
+.start-form {
+    grid-area: form;
+    margin-top:auto;
+}
+
+.form-text {
+    width:248px;
+    height: 18px;
+    padding:4px;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 16px;
+    border: solid 2px #999999;
+}
+
+.form-button {
+    margin-top: 5px;
+    height: 30px;
+    width:260px;
+    display: inline-block;
+    border: none;
+    background: #5900B2;
+    color: #FFFFFF;
+    padding: 2px;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.play-container {
+    display: none;
+}
+
+.game-ranking {
+    display: none;
+    /* grid-area: ranking; */
+    background-color:blue
+}
+
+.commands-container {
+    margin-top: 26px;
+    display: grid;
+    grid-template-areas: 
+    "power move"
+}
+
+.commands-power {
+    grid-area: power;
+    height: 104px;
+    width: 56px;
+    border-radius: 56px;
+    background-color: #EFEFEF;
+    border: solid 20px #999999;
+    margin-left: 15px;
+}
+
+.commands-move {
+    grid-area: move;
+    height: 144px;
+    width: 144px;
+    margin-left: auto;
+    border-radius: 100%;
+    background-color: #EFEFEF;
+    display: grid;
+    grid-template-areas: 
+    ". up ."
+    "left circle right"
+    ". down ."
+}
+
+.move-circle {
+    grid-area: circle;
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    margin:4px;
+    background-color: #999999;
+}
+
+.move-up {
+    grid-area: up;
+
+}
+
+.move-down {
+    grid-area: down;
+    transform:rotate(180deg);
+    padding:auto;
+}
+
+.move-right {
+    grid-area: right;
+    transform:rotate(90deg);
+}
+
+.move-left {
+    grid-area: left;
+    transform:rotate(270deg);
 }
