--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Boilerplate</title>
-
+    <title>Cave Explorer</title>
     <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
