--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -105,13 +105,23 @@ h2 {
 }
 
 .play-container {
-    display: none;
+    height: 290px;
+    width: 290px;
+    background-color: #EFEFEF;
+    border:solid 2px #999999;
+    border-radius: 4px;
 }
 
-.game-ranking {
-    display: none;
-    /* grid-area: ranking; */
-    background-color:blue
+.play-pause {
+    position: absolute;
+    top:78px;
+    background-color: #07070700;
+    height: 290px;
+    width: 290px;
+    border:solid 2px #999999;
+    border-radius: 4px;
+    z-index: 1;
+    --paused:true;
 }
 
 .commands-container {
@@ -127,8 +137,12 @@ h2 {
     width: 56px;
     border-radius: 56px;
     background-color: #EFEFEF;
-    border: solid 20px #999999;
+    border: solid 20px #5900B2;
     margin-left: 15px;
+}
+
+.commands-power-disabled {
+    border-color:#999999;
 }
 
 .commands-move {
@@ -151,12 +165,15 @@ h2 {
     width: 40px;
     border-radius: 100%;
     margin:4px;
+    background-color: #5900B2;
+}
+
+.move-circle-disabled {
     background-color: #999999;
 }
 
 .move-up {
     grid-area: up;
-
 }
 
 .move-down {
