--- a/views/play.hbs
+++ b/views/play.hbs
@@ -7,7 +7,7 @@
     <div class="play-pause" onclick="pause()"></div>
 
     <div class="commands-container">
-        <div class="commands-power"></div>
+        <div class="commands-power"><a href="/ranking">Lose</a></div>
         <div class="commands-move">
             <div class="move-up"><img src="images/triangle-purple.svg" alt=""></div>
             <div class="move-down"><img src="images/triangle-purple.svg" alt=""></div>
