--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,16 +20,7 @@
         </div>
     </div>
 
-    <div class="commands-container">
-        <div class="commands-power commands-power-disabled"></div>
-        <div class="commands-move">
-            <div class="move-up"><img src="images/triangle-gray.svg" alt=""></div>
-            <div class="move-down"><img src="images/triangle-gray.svg" alt=""></div>
-            <div class="move-right"><img src="images/triangle-gray.svg" alt=""></div>
-            <div class="move-left"><img src="images/triangle-gray.svg" alt=""></div>
-            <div class="move-circle move-circle-disabled"></div>
-        </div>
-    </div>
+    {{>commandsInactive}}
     
 </div>
 
