--- a/views/play.hbs
+++ b/views/play.hbs
@@ -2,25 +2,14 @@
 {{>header}}
 
 <div class="game-container">
-    <div class="play-container"></div>
-
-    <div class="play-pause" onclick="pause()"></div>
-
-    <div class="commands-container">
-        <div class="commands-power"><a href="/ranking">Lose</a></div>
-        <div class="commands-move">
-            <div class="move-up"><img src="images/triangle-purple.svg" alt=""></div>
-            <div class="move-down"><img src="images/triangle-purple.svg" alt=""></div>
-            <div class="move-right"><img src="images/triangle-purple.svg" alt=""></div>
-            <div class="move-left"><img src="images/triangle-purple.svg" alt=""></div>
-            <div class="move-circle"></div>
-        </div>
+    <div class="play-container">
+        <canvas id="gameScreen"></canvas>
     </div>
-    
+
+    <div class="play-pause" onClick="pause()"></div>
+
+    {{>commandsActive}}
+    {{>commandsInactive}}
 </div>
-
-
-
-
 
 {{>footer}}
