bug fix when the cursor is moved out of the button, the button would not release

--- a/views/partials/commandsActive.hbs
+++ b/views/partials/commandsActive.hbs
@@ -1,7 +1,7 @@
 
 <div class="commands-container" id="commands-active">
     <div class="commands-power"><a href="/ranking">Lose</a></div>
-    <div class="commands-move" onpointerup="input.buttonRelease()">
+    <div class="commands-move" onpointerout="input.buttonRelease()" onpointerup="input.buttonRelease()">
         <div class="move-up"><img src="images/triangle-purple.svg" alt="" onpointerdown="input.buttonDirection('UP')"></div>
         <div class="move-down"><img src="images/triangle-purple.svg" alt="" onpointerdown="input.buttonDirection('DOWN')"></div>
         <div class="move-right"><img src="images/triangle-purple.svg" alt="" onpointerdown="input.buttonDirection('RIGHT')"></div>
