prevent right click menu on commandsActive to avoid weird touch behavior

--- a/views/partials/commandsActive.hbs
+++ b/views/partials/commandsActive.hbs
@@ -1,5 +1,5 @@
 
-<div class="commands-container" id="commands-active">
+<div class="commands-container" id="commands-active" oncontextmenu="return false;">
     <div class="commands-power"><a href="/ranking">Lose</a></div>
     <div class="commands-move" onpointerout="input.buttonRelease()" onpointerup="input.buttonRelease()">
         <div class="move-up"><img src="images/triangle-purple.svg" alt="" onpointerdown="input.buttonDirection('UP')"></div>
