add pause functionality

--- a/views/play.hbs
+++ b/views/play.hbs
@@ -6,7 +6,7 @@
         <canvas id="gameScreen"></canvas>
     </div>
 
-    <div class="play-pause" onClick="pause()"></div>
+    <div class="play-pause" onClick="input.pause()"></div>
 
     {{>commandsActive}}
 </div>
