--- a/views/play.hbs
+++ b/views/play.hbs
@@ -6,7 +6,12 @@
         <canvas id="gameScreen"></canvas>
     </div>
 
-    <div class="play-pause" onClick="input.pause()"></div>
+    <div class="play-pause" onClick="input.pause()">
+        <div class="pause-text pause-text-hide">
+            <h2>The Game is Paused</h2>
+            <p>Click the screen to continue...</p>
+        </div>
+    </div>
 
     {{>commandsActive}}
 </div>
