--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cave Explorer</title>
+    <link rel="icon"
+      href="images/favicon.ico">
     <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
+
+  <div class="navbar">
+      <a href="/">
+          <h1>Cave Explorer</h1>
+      </a>
+      <span class="toggle-sound sound-on">
+          <img src="images/sound-on-white.svg" alt="">
+      </span>
+  </div>
+
     {{{body}}}
+
+  <script src="/index.js"></script>
+
 </body>
 </html>
