--- a/views/play.hbs
+++ b/views/play.hbs
@@ -1,6 +1,4 @@
 
-{{>header}}
-
 <div class="game-container">
     <div class="play-container">
         <canvas id="gameScreen"></canvas>
@@ -17,5 +15,6 @@
 </div>
 
 <script src="./game.js"></script>
-
-{{>footer}}
+<audio class="music" autoplay loop>
+    <source src="/sound/04 - Sanctuary.ogg">
+</audio>
