--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -1,7 +1,4 @@
 
-{{>header}}
-
-
 <div class="game-container">
     <div class="ranking-container">
         <h2 class="ranking-title">Game Over!</h2>
@@ -16,14 +13,8 @@
     </div>
 
     {{>commandsInactive}}
-    
 </div>
 
-
-
-
-
-
-
-
-{{>footer}}
+<audio class="music" autoplay loop>
+    <source src="/sound/20 - Game Over.ogg">
+</audio>
