--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -23,6 +23,32 @@ body {
 .navbar {
     background-color: #5900B2;
     padding: 10px;
+    text-align: center;
+    display: grid;
+    vertical-align: middle;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-areas: 
+    ". title sound"
+}
+
+.navbar a {
+    grid-area: title;
+}
+
+.navbar .toggle-sound {
+    grid-area: sound;
+}
+
+.sound-on img {
+    content: url('/images/sound-on-white.svg');
+    height:32px;
+    margin-bottom: -4px;
+}
+
+.sound-off img {
+    content: url('/images/sound-off-white.svg');
+    height:32px;
+    margin-bottom: -4px;
 }
 
 h1 {
@@ -127,7 +153,7 @@ h2 {
 .ranking-container {
     height: 260px;
     width: 260px;
-    background-image: url("/images/start.jpg");
+    background-image: url("/images/start.svg");
     background-repeat: no-repeat;
     background-size: 100%;
     border:solid 2px #999999;
