sound on/off persists when changing pages

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,6 +21,6 @@
     {{>commandsInactive}}
 </div>
 
-<audio class="music" autoplay loop>
+<audio class="music" {{#if soundOn}}autoplay{{/if}} loop>
     <source src="/sound/01 - Opening.ogg">
 </audio>
