--- a/views/play.hbs
+++ b/views/play.hbs
@@ -15,6 +15,6 @@
 </div>
 
 <script src="./game.js"></script>
-<audio class="music" autoplay loop>
+<audio class="music" {{#if soundOn}}autoplay{{/if}} loop>
     <source src="/sound/04 - Sanctuary.ogg">
 </audio>
