--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -15,6 +15,6 @@
     {{>commandsInactive}}
 </div>
 
-<audio class="music" autoplay loop>
+<audio class="music" {{#if soundOn}}autoplay{{/if}} loop>
     <source src="/sound/20 - Game Over.ogg">
 </audio>
