--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
 <body>
 
   <div class="navbar">
-      <a href="/">
+      <a href="/{{paramString}}">
           <h1>Cave Explorer</h1>
       </a>
       {{#if soundOn}}
