--- a/views/partials/commandsActive.hbs
+++ b/views/partials/commandsActive.hbs
@@ -1,6 +1,6 @@
 
 <div class="commands-container" id="commands-active" oncontextmenu="return false;">
-    <div class="commands-power" onpointerup="input.usePower()"></div>
+    <div class="commands-power" onpointerup="input.usePower()"><a href="/ranking{{paramString}}">LOSE</a></div>
     <div class="commands-move" onpointerout="input.move('STOP')" onpointerup="input.move('STOP')">
         <div class="move-up"><img src="images/triangle-purple.svg" alt="" onpointerdown="input.move('UP')"></div>
         <div class="move-down"><img src="images/triangle-purple.svg" alt="" onpointerdown="input.move('DOWN')"></div>
