add static monster with game over logic

--- a/views/play.hbs
+++ b/views/play.hbs
@@ -1,4 +1,5 @@
 
+<input class="game-over" value="/ranking{{paramString}}">
 <div class="game-container">
     <div class="play-container">
         <canvas id="gameScreen"></canvas>
