--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -131,6 +131,10 @@ h2 {
     border-radius: 4px;
 }
 
+.game-over{
+    display: none;
+}
+
 .play-container {
     height: 290px;
     width: 290px;
