--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,7 @@
         <div class="start-form">
             <form action="/play" method="GET">
                 <input class="form-text" type="text" placeholder="Explorer Name" required="true" name="explorer">
-                <input type="text" name="soundOn" value="false" class="sound-on-form" hidden>
+                <input type="text" name="soundOn" value="{{#if soundOn}}true{{else}}false{{/if}}" class="sound-on-form" hidden>
                 <input class="form-button" value="Start!" type="submit">
             </form>
         </div>
