--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -5,6 +5,7 @@
         <div class="ranking-display-left"></div>
         <div class="ranking-display-right"></div>
         <div class="ranking-play">
+            <input class="play-again" value="/play{{paramString}}" hidden>
             <form action="/play" method="GET">
                 <input type="text" name="explorer" value="{{explorer}}" hidden>
                 <input type="text" name="soundOn" value="{{soundOn}}" class="sound-on-form" hidden>
@@ -19,3 +20,5 @@
 <audio class="music" {{#if soundOn}}autoplay{{/if}} loop>
     <source src="/sound/20 - Game Over.ogg">
 </audio>
+
+<script src="/playagain.js"></script>
