--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -2,8 +2,16 @@
 <div class="game-container">
     <div class="ranking-container">
         <h2 class="ranking-title">Game Over!</h2>
-        <div class="ranking-display-left"></div>
-        <div class="ranking-display-right"></div>
+        <div class="ranking-display-left">
+            {{#each firstTable}}
+                <li class="ranking-item">{{this.score}} - {{this.player}}</li>
+            {{/each}}
+        </div>
+        <div class="ranking-display-right">
+            {{#each secondTable}}
+                <li class="ranking-item">{{this.score}} - {{this.player}}</li>
+            {{/each}}
+        </div>
         <div class="ranking-play">
             <input class="play-again" value="/play{{paramString}}" hidden>
             <form action="/play" method="GET">
