--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,6 +8,7 @@
             As you go down, you will find hungry agressive monsters.
             Just go down hoping to find a safer place to wait for help...
             </p>
+            {{>keyboardControls}}
         </div>
         <img class="start-image" src="/images/start.svg" alt="">
         <div class="start-form">
