--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
 <body>
 
   <div class="navbar">
-      <a href="/{{paramString}}">
+      <a class="title" href="/{{paramString}}">
           <h1>Cave Explorer</h1>
       </a>
       {{#if soundOn}}
@@ -24,6 +24,9 @@
           <img src="images/sound-off-white.svg" alt="">
       </span>
       {{/if}}
+      <a class="github" href="https://github.com/Ian021/caveexplorer">
+        <img src="images/GitHub-Mark-Light-32px.png" alt="">
+      </a>
       
   </div>
 
